src/test/resources/purescript_examples/passing/TypeClassesDerive.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(ImportDeclaration)
        PsiElement(import)('import')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(Qualified)
          PureASTWrapperElement(ModuleName)
            PsiElement(proper name)('Prelude')
        PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(NewtypeDeclaration)
        PsiElement(newtype)('newtype')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('UUID')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('UUID')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PureASTWrapperElement(TypeConstructor)
            PureASTWrapperElement(Qualified)
              PsiElement(proper name)('String')
              PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(DeriveTypeInstanceDeclaration)
        PsiElement(derive)('derive')
        PsiElement(whitespace)(' ')
        PsiElement(instance)('instance')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('showUUID')
        PsiElement(whitespace)(' ')
        PsiElement(::)('::')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PureASTWrapperElement(Qualified)
            PsiElement(proper name)('Show')
            PsiElement(whitespace)(' ')
        PureASTWrapperElement(TypeAtom)
          PureASTWrapperElement(TypeConstructor)
            PureASTWrapperElement(Qualified)
              PsiElement(proper name)('UUID')
              PsiElement(whitespace)('\n\n')
