src/test/resources/purescript_examples/failing/MPTCs.purs.psi
FILE
  PureASTWrapperElement(Program)
    PureASTWrapperElement(Module)
      PsiElement(module)('module')
      PsiElement(whitespace)(' ')
      PureASTWrapperElement(Qualified)
        PureASTWrapperElement(ModuleName)
          PsiElement(proper name)('Main')
      PsiElement(whitespace)(' ')
      PsiElement(where)('where')
      PsiElement(whitespace)('\n\n')
      PureASTWrapperElement(TypeClassDeclaration)
        PsiElement(class)('class')
        PsiElement(whitespace)(' ')
        PureASTWrapperElement(ClassName)
          PsiElement(proper name)('Foo')
          PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PureASTWrapperElement(TypeDeclaration)
          PsiElement(identifier)('f')
          PsiElement(whitespace)(' ')
          PsiElement(::)('::')
          PsiElement(whitespace)(' ')
          PureASTWrapperElement(Type)
            PureASTWrapperElement(TypeAtom)
              PureASTWrapperElement(TypeVar)
                PsiElement(identifier)('a')
                PsiElement(whitespace)(' ')
            PsiElement(->)('->')
            PsiElement(whitespace)(' ')
            PureASTWrapperElement(Type)
              PureASTWrapperElement(TypeAtom)
                PureASTWrapperElement(TypeVar)
                  PsiElement(identifier)('a')
                  PsiElement(whitespace)('\n\n')
      PsiElement(instance)('instance')
      PsiElement(whitespace)(' ')
      PsiErrorElement:Expecting identifier or (
        PsiElement(proper name)('Foo')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('String')
        PsiElement(whitespace)(' ')
        PsiElement(proper name)('String')
        PsiElement(whitespace)(' ')
        PsiElement(where)('where')
        PsiElement(whitespace)('\n  ')
        PsiElement(identifier)('f')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)(' ')
        PsiElement(=)('=')
        PsiElement(whitespace)(' ')
        PsiElement(identifier)('a')
        PsiElement(whitespace)('\n')
